# Cerberus

./: .gitignore  Accomplishments1.txt  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  index.html
diagrams/: contestant_flowchart.dia  erd.dia  use_case.dia
include/: admin.h  checker.h  client.h  config_editor.h  contestant_app.h  data_types.h  deployer.h  error_defs.h  question_editor.h  question_model.h  registration_app.h  server.h  server_app.h  sql_util.h  test_projector.h  test_server.h  tester.h  xml_util.h
include/net/: admin_connection.h  contestant_connection.h  contestant_net.h  presenter_connection.h  presenter_net.h  projector_connection.h  projector_net.h  protocol.h  server_net.h  temp_connection.h
include/patterns/: singleton.h
include/tests/: contestant_net_test.h  sql_test.h  xml_test.h
include/util/: ContestTimer.h  sql_util.h  xml_util.h
misc/: config_options.txt  deployment_requirements.txt  integration_plan.xls  mechanics-for-slashit.txt  networking.html  networking.txt  pres_requirements.txt  projector_styling.html  unittest_plan.xls
resources/: a1.xml  a2.xml  a3.xml  answers.xml  b1.xml  b4.xml  c1.xml  c2.xml  client.crt  client.key  client_config.xml  client_deploy.txt  conf_editor_deploy.txt  db_dump.sql  deployer_config.cfg  lulwut1.xml  lulwut2.xml  lulwut3.xml  lulwut4.xml  net_config.xml  presenter_config.xml  projector_config.xml  projector_deploy.txt  qeditor_deploy.txt  questions.xml  registration_deploy.txt  server.crt  server.db  server.key  server.sql  server_config.xml  server_deploy.txt  stage.xgrp  stage.xsd  stage1.xml  stage1_a.xml  stage1_q.xml  stage2.xml  stage2_a.xml  stage2_q.xml  (+7 more)
resources/projector_themes/it/: error.html  index.html  projector.css  qdisplay.html  scoreboard.html  timeboard.html
src/: CMakeLists.txt
src/checker/: CMakeLists.txt  checker.cpp
src/client/: CMakeLists.txt  contestant_app.cpp  contestant_app.cpp.orig  contestant_app.ui  elims.ui  ending.ui  finals.ui  finalsChoice.ui  finalsIdent.ui  login.ui  reconnect.ui  round1.ui  semifinals.ui  summary.ui  tiebreaker.ui  welcome.ui
src/config_editor/: CMakeLists.txt  config_editor.cpp  main.cpp  server_editor.ui
src/ctemplate/: CMakeLists.txt
src/ctemplate/CMakeModules/: CheckCXXHash.cmake  CheckCompilerCharacteristics.cmake  CheckDirent.cmake  CheckHaveAttribute.cmake
src/ctemplate/src/: config.h  config.h.cmake.in
src/ctemplate/src/ctemplate/: template_annotator.h
src/deployer/: CMakeLists.txt  deployer.cpp  deployer.ui  deployer_files.txt  functions_test.cpp  main.cpp
src/net/: CMakeLists.txt  admin_connection.cpp  contestant_connection.cpp  contestant_net.cpp  presenter_connection.cpp  presenter_net.cpp  projector_connection.cpp  projector_net.cpp  server_net.cpp  temp_connection.cpp
src/projector/: AuthorController.cpp  AuthorController.h  CMakeLists.txt  ContestTimer.cpp  ContestTimer.h  DefaultTemplates.cpp  DefaultTemplates.h  MainController.cpp  MainController.h  ProjectorController.cpp  ProjectorController.h  ProjectorWindow.cpp  ProjectorWindow.h  ProjectorWindow.ui  TemplateManager.cpp  TemplateManager.h  main.cpp
src/projector/ctemplate/: CMakeLists.txt
src/projector/ctemplate/CMakeModules/: CheckCXXHash.cmake  CheckDirent.cmake
src/projector/ctemplate/src/: config.h.cmake.in
src/projector/ctemplate/src/base/: mutex.h
src/projector/ctemplate/src/ctemplate/: template.h  template_dictionary.h  template_dictionary_interface.h  template_modifiers.h  template_string.h
src/projector/ctemplate/src/windows/: port.cc  port.h
src/question_editor/: CMakeLists.txt  question_editor.cpp  question_editor.ui  question_editor_v2.ui  question_model.cpp
src/registration_app/: CMakeLists.txt  add_team.ui  registration_app.cpp  team_table.ui  team_table_v2.ui  team_view.ui  teammember_edit.ui  user_edit.ui  user_table.ui
src/server/: CMakeLists.txt  admin.cpp  server.cpp  server.ui  server_app.cpp  server_app.ui  view_answers.ui
src/test/: CMakeLists.txt  client.cpp  client.h  client.ui  projector.ui  server.cpp  server.h  server.ui  test_client.cpp  test_projector.cpp  test_server.cpp  tester.cpp  tester.h
src/unit_tests/: CMakeLists.txt  contestant_net_test.cpp  sql_test.cpp  sql_test.h  xml_test.cpp  xml_test.h
src/user_manager/: CMakeLists.txt
src/utils/: CMakeLists.txt  ContestTimer.cpp  sql_util.cpp  xml_util.cpp
