cmake_minimum_required(VERSION 2.6)
project("Cerberus")

if(${WIN32})
	set(CMAKE_INCLUDE_PATH /usr/i686-pc-mingw32/sys-root/mingw/include/)
#set(QT_INCLUDE_DIR /usr/i686-pc-mingw32/sys-root/mingw/include)
#set(QT_LIBRARY_DIR /usr/i686-pc-mingw32/sys-root/mingw/lib)
else()
endif()

find_package(Qt4 REQUIRED)
enable_testing()

include_directories("${PROJECT_SOURCE_DIR}/include")

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})

set(QT_USE_QTSQL true)
set(QT_USE_QTNETWORK true)
set(QT_USE_QTTEST true)
set(QT_USE_QTXML true)
include(${QT_USE_FILE})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
link_libraries(${QT_LIBRARIES} network util)

add_subdirectory(src)
#add the ff into src/CMakeLists.txt
#install(TARGETS binary_file RUNTIME DESTINATION bin COMPONENT applications)
set(CPACK_PACKAGE_NAME "Cerberus")
set(CPACK_COMPONENTS_ALL applications)
set(CPACK_COMPONENT_APPLICATIONS_DISPLAY_NAME "Core Application")
set(CPACK_COMPONENT_APPLICATIONS_DESCRIPTION "Contains the core appliation")
#set(CPACK_COMPONENT_APPLICATION_DEPENDS libraries)
set(CPACK_COMPONENT_APPLICATIONS_GROUP "Runtime")
set(CPACK_COMPONENT_GROUP_APPLICATION_DESCRIPTION "The runtime stuff")
set(CPACK_PACKAGE_VENDOR "CompSAt")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "Cerberus")
include(CPack)
