set(QT_USE_QTSQL true)
set(QT_USE_QTNETWORK true)
set(QT_USE_QTTEST true)
include(${QT_USE_FILE})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
link_libraries(${QT_LIBRARIES})

#set(SRCS main.cpp mainwindow.cpp)
#set(MOC_HDRS mainwindow.h)
#QT4_WRAP_CPP(MOC_SRCS ${MOC_HDRS})
#set(UIS mainwindow.ui)
#QT4_WRAP_UI(UIS_H ${UIS})
#add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})

add_subdirectory(test)