#set(SRCS main.cpp mainwindow.cpp)
#set(MOC_HDRS mainwindow.h)
#QT4_WRAP_CPP(MOC_SRCS ${MOC_HDRS})
#set(UIS mainwindow.ui)
#QT4_WRAP_UI(UIS_H ${UIS})
#add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})

add_subdirectory(test)
add_subdirectory(unit_tests)
add_subdirectory(admin)
add_subdirectory(client)
add_subdirectory(config_editor)
add_subdirectory(deployer)
add_subdirectory(projector)
add_subdirectory(question_editor)
add_subdirectory(server)
add_subdirectory(user_manager)
add_subdirectory(net)
add_subdirectory(utils)
add_subdirectory(registration_app)
