#set(SRCS main.cpp mainwindow.cpp)
#set(MOC_HDRS mainwindow.h)
#QT4_WRAP_CPP(MOC_SRCS ${MOC_HDRS})
#set(UIS mainwindow.ui)
#QT4_WRAP_UI(UIS_H ${UIS})
#link_libraries(${QT_LIBRARIES})
#add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})

#set(Q_EDITOR_SRC question_editor.cpp question_model.cpp)
#set(Q_EDITOR_MHDR ${INCLUDE_DIR}/question_editor.h ${INCLUDE_DIR}/question_model.h )
#qt4_wrap_cpp(Q_EDITOR_MSRC ${Q_EDITOR_MHDR})
#set(Q_EDITOR_UIS question_editor.ui)
#qt4_wrap_ui(Q_EDITOR_UIS_H ${Q_EDITOR_UIS})
#add_executable(qeditor ${Q_EDITOR_SRC} ${Q_EDITOR_MSRC} ${Q_EDITOR_UIS_H})

#set(D_EDITOR_SRC deployer.cpp main.cpp)
#set(D_EDITOR_MHDR ${INCLUDE_DIR}/deployer.h )
#qt4_wrap_cpp(D_EDITOR_MSRC ${D_EDITOR_MHDR})
#set(D_EDITOR_UIS deployer.ui)
#qt4_wrap_ui(D_EDITOR_UIS_H ${D_EDITOR_UIS})
#add_executable(deployer ${D_EDITOR_SRC} ${D_EDITOR_MSRC} ${D_EDITOR_UIS_H})
