#set(SRCS main.cpp mainwindow.cpp)
#set(MOC_HDRS mainwindow.h)
#QT4_WRAP_CPP(MOC_SRCS ${MOC_HDRS})
#set(UIS mainwindow.ui)
#QT4_WRAP_UI(UIS_H ${UIS})
#link_libraries(${QT_LIBRARIES})
#add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})
set(INCLUDE_DIR ../../include)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
link_libraries(${QT_LIBRARIES})

set(NET_SRCS contestant_net.cpp server_net.cpp)
set(NET_MHDRS ${INCLUDE_DIR}/net/contestant_net.h
		${INCLUDE_DIR}/net/server_net.h)
QT4_WRAP_CPP(NET_MSRCS ${NET_MHDRS})
add_library(network ${NET_SRCS} ${NET_MSRCS})