#set(SRCS main.cpp mainwindow.cpp)
#set(MOC_HDRS mainwindow.h)
#QT4_WRAP_CPP(MOC_SRCS ${MOC_HDRS})
#set(UIS mainwindow.ui)
#QT4_WRAP_UI(UIS_H ${UIS})
#link_libraries(${QT_LIBRARIES})
#add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})

set(REG_APP_SRC registration_app.cpp)
set(REG_APP_MHDR ${INCLUDE_DIR}/registration_app.h)
QT4_WRAP_CPP(REG_APP_MSRCS ${REG_APP_MHDR})
set(REG_APP_UIS add_team.ui team_view.ui teammember_edit.ui)
QT4_WRAP_UI(REG_APP_UIS_H ${REG_APP_UIS})
add_executable(registration ${REG_APP_SRC} ${REG_APP_UIS_H} ${REG_APP_MSRCS})
