#set(SRCS main.cpp mainwindow.cpp)
#set(MOC_HDRS mainwindow.h)
#QT4_WRAP_CPP(MOC_SRCS ${MOC_HDRS})
#set(UIS mainwindow.ui)
#QT4_WRAP_UI(UIS_H ${UIS})
#link_libraries(${QT_LIBRARIES})
#add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})
set(QT_USE_QTSQL true)
set(QT_USE_QTNETWORK true)
include(${QT_USE_FILE})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
link_libraries(${QT_LIBRARIES})

set(NET_CLIENT_SRC client.cpp)
set(NET_CLIENT_MHDR client.h)
qt4_wrap_cpp(NET_CLIENT_MSRC ${NET_CLIENT_MHDR})
set(NET_CLIENT_UIS client.ui)
qt4_wrap_ui(NET_CLIENT_UIS_H ${NET_CLIENT_UIS})
add_executable(client ${NET_CLIENT_SRC} ${NET_CLIENT_MSRC} ${NET_CLIENT_UIS_H})

set(NET_SERVER_SRC server.cpp)
