#set(SRCS main.cpp mainwindow.cpp)
#set(MOC_HDRS mainwindow.h)
#QT4_WRAP_CPP(MOC_SRCS ${MOC_HDRS})
#set(UIS mainwindow.ui)
#QT4_WRAP_UI(UIS_H ${UIS})
#link_libraries(${QT_LIBRARIES})
#add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
link_libraries(${QT_LIBRARIES})

set(NET_CLIENT_SRC client.cpp)
set(NET_CLIENT_MHDR client.h)
qt4_wrap_cpp(NET_CLIENT_MSRC ${NET_CLIENT_MHDR})
set(NET_CLIENT_UIS client.ui)
qt4_wrap_ui(NET_CLIENT_UIS_H ${NET_CLIENT_UIS})
add_executable(client ${NET_CLIENT_SRC} ${NET_CLIENT_MSRC} ${NET_CLIENT_UIS_H})

set(NET_SERVER_SRC server.cpp)
set(NET_SERVER_MHDR server.h)
qt4_wrap_cpp(NET_SERVER_MSRC ${NET_SERVER_MHDR})
set(NET_SERVER_UIS server.ui)
qt4_wrap_ui(NET_SERVER_UIS_H ${NET_SERVER_UIS})
add_executable(server ${NET_SERVER_SRC} ${NET_SERVER_MSRC} ${NET_SERVER_UIS_H})
