#set(SRCS main.cpp mainwindow.cpp)
#set(MOC_HDRS mainwindow.h)
#QT4_WRAP_CPP(MOC_SRCS ${MOC_HDRS})
#set(UIS mainwindow.ui)
#QT4_WRAP_UI(UIS_H ${UIS})
#link_libraries(${QT_LIBRARIES})
#add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})

set(NET_CLIENT_SRC test_client.cpp)
set(NET_CLIENT_MHDR ${INCLUDE_DIR}/test_client.h)
qt4_wrap_cpp(NET_CLIENT_MSRC ${NET_CLIENT_MHDR})
set(NET_CLIENT_UIS client.ui)
qt4_wrap_ui(NET_CLIENT_UIS_H ${NET_CLIENT_UIS})
add_executable(test_client ${NET_CLIENT_SRC} ${NET_CLIENT_MSRC} ${NET_CLIENT_UIS_H})

set(NET_SERVER_SRC test_server.cpp)
set(NET_SERVER_MHDR ${INCLUDE_DIR}/test_server.h )
qt4_wrap_cpp(NET_SERVER_MSRC ${NET_SERVER_MHDR})
set(NET_SERVER_UIS server.ui)
qt4_wrap_ui(NET_SERVER_UIS_H ${NET_SERVER_UIS})
add_executable(test_server ${NET_SERVER_SRC} ${NET_SERVER_MSRC} ${NET_SERVER_UIS_H})

set(NET_PROJECTOR_SRC test_projector.cpp)
set(NET_PROJECTOR_MHDR ${INCLUDE_DIR}/test_projector.h )
qt4_wrap_cpp(NET_PROJECTOR_MSRC ${NET_PROJECTOR_MHDR})
set(NET_PROJECTOR_UIS projector.ui)
qt4_wrap_ui(NET_PROJECTOR_UIS_H ${NET_PROJECTOR_UIS})
add_executable(test_projector ${NET_PROJECTOR_SRC} ${NET_PROJECTOR_MSRC} ${NET_PROJECTOR_UIS_H})

set(TEST_SRC tester.cpp)
set(TEST_HDR ${INCLUDE_DIR}/tester.h)
qt4_wrap_cpp(TEST_MOC ${TEST_HDR})
add_executable(test ${TEST_SRC} ${TEST_MOC})
