#set(SRCS main.cpp mainwindow.cpp)
#set(MOC_HDRS mainwindow.h)
#QT4_WRAP_CPP(MOC_SRCS ${MOC_HDRS})
#set(UIS mainwindow.ui)
#QT4_WRAP_UI(UIS_H ${UIS})
#link_libraries(${QT_LIBRARIES})
#add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})

#set(CMAKE_EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
set(XML_UT_SRCS xml_test.cpp)
set(XML_UT_MHDRS xml_test.h)
qt4_wrap_cpp(XML_UT_MSRCS ${XML_UT_MHDRS})
add_executable(xml_test ${XML_UT_SRCS} ${XML_UT_MSRCS})
add_test(xml_ut xml_test)

#set(SQL_UT_SRCS sql_test.cpp)
#set(SQL_UT_MHDRS sql_test.h)
#qt4_wrap_cpp(SQL_UT_MSRCS ${SQL_UT_MHDRS})
#add_executable(sql_test ${SQL_UT_SRCS} ${SQL_UT_MSRCS})
#add_test(sql_ut sql_test)

#set(CCNET_UT_SRCS contestant_net_test.cpp)
#set(CCNET_UT_MHDRS contestant_net_test.h)
#qt4_wrap_cpp(CCNET_UT_MSRCS ${CCNET_UT_MHDRS})
#add_executable(ccnet_test ${CCNET_UT_SRCS} ${CCNET_UT_MSRCS})
