#set(SRCS main.cpp mainwindow.cpp)
#set(MOC_HDRS mainwindow.h)
#QT4_WRAP_CPP(MOC_SRCS ${MOC_HDRS})
#set(UIS mainwindow.ui)
#QT4_WRAP_UI(UIS_H ${UIS})
#link_libraries(${QT_LIBRARIES})
#add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})
set(INCLUDE_DIR ../../include)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
link_libraries(${QT_LIBRARIES})

set(UTIL_SRCS sql_util.cpp xml_util.cpp)
set(UTIL_MHDRS ${INCLUDE_DIR}/sql_util.h
		${INCLUDE_DIR}/xml_util.h)
QT4_WRAP_CPP(UTIL_MSRCS ${UTIL_MHDRS})
add_library(util ${UTIL_SRCS} ${UTIL_MSRCS})